Fix display view on small screens
On small screens header was lost, now it should be displayed at all times

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -11,11 +11,19 @@ html, body {
     background-size: cover;
     opacity: 0.65;
 }
-.hcen{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+@media only screen and (min-width: 576px){
+    .hcen{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+@media only screen and (max-width: 575px){
+    .hcen{
+        position: absolute;
+        top: 1%;
+    }
 }
 .head{
     background-color: cornflowerblue;
